# thangail

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: main.rs
static/: countries.json  index.html
