[package]
name = "thangail"
version = "0.1.2"
edition = "2021"
description = "Geofencing helper for Mikrotik"
homepage = "https://thangail.link"
readme = "README.md"
keywords = [
    "mikrotik",
    "geofencing",
    "geoblocking"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Orhideous/thangail"

[dependencies]
reqwest = { version = "0.11",  features = ["rustls-tls"], default-features = false }
rocket = "0.5.0"
rocket_async_compression = "0.5"

[profile.release]
strip = true
